test/libsolidity/syntaxTests/nameAndTypeResolution/504_builtin_ripemd160_reject_value.sol
contract C {
    function f() public {
        ripemd160.value();
    }
}
// ----
// TypeError 8820: (47-62): Member "value" is only available for payable functions.
